
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-starter"
version = "0.1.0"
description = "Starter Python project"
requires-python = ">=3.9"
dependencies = [
    "torch >= 2.1",
    "transformers",
    "accelerate"
]

[tool.pytest.ini_options]
testpaths = ["tests"]